added sorting, filtering, limiting to getPets
